clusters/cl01tl/manifests/audiobookshelf/HTTPRoute-audiobookshelf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/instance: audiobookshelf
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: audiobookshelf
    helm.sh/chart: audiobookshelf-5.2.1
  annotations:
    gethomepage.dev/description: Audiobookshelf
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sh-audiobookshelf.webp
    gethomepage.dev/name: Podcasts and Audiobooks
    gethomepage.dev/podSelector: ""
    gethomepage.dev/siteMonitor: http://audiobookshelf.audiobookshelf:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "400"
  namespace: audiobookshelf
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "audiobookshelf.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: audiobookshelf
          namespace: audiobookshelf
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
